[package]
name = "summed-radix-tree"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "summed_radix_tree"
crate-type = ["cdylib"]

[profile.profiling]
inherits = "release"
lto = "thin"
debug = "line-tables-only"
frame-pointers = "force-on"
strip = false

[dependencies.pyo3]
version = "0.28.2"
features = ["abi3-py310"]

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3"]
